--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,6 +46,8 @@ header {
       color: black; }
       header nav div #navbarSupportedContent ul li ul li .dropdown-item {
         font-size: 15px; }
+      header nav div #navbarSupportedContent ul li a:hover {
+        color: #FF2931; }
       header nav div #navbarSupportedContent ul form input {
         font-size: 18px;
         color: black; }
@@ -195,27 +197,24 @@ main .disciplinas {
     main .disciplinas .disciplinas-contenedor div {
       justify-self: center;
       align-items: center;
-      padding: 15px;
-      transition: 0.9s;
-      transition-delay: 0.05s; }
+      padding: 25px; }
       main .disciplinas .disciplinas-contenedor div a {
         gap: 10px;
         justify-content: center;
         align-items: center; }
         main .disciplinas .disciplinas-contenedor div a img {
           object-fit: cover;
-          padding: 15px;
           justify-self: center;
           align-items: center;
           width: 570px;
-          height: 370px; }
+          height: 370px;
+          transition: 0.5s;
+          transition-delay: 0.05s; }
         main .disciplinas .disciplinas-contenedor div a img:hover {
           transform: scale(1.05);
           box-shadow: 10px 10px 16px -7px rgba(0, 0, 0, 0.75);
           -webkit-box-shadow: 10px 10px 16px -7px rgba(0, 0, 0, 0.75);
-          -moz-box-shadow: 10px 10px 16px -7px rgba(0, 0, 0, 0.75);
-          padding: 0;
-          margin-bottom: 0; }
+          -moz-box-shadow: 10px 10px 16px -7px rgba(0, 0, 0, 0.75); }
 
 .calzado-pag {
   height: auto;
@@ -527,7 +526,6 @@ footer .footer-contenedor {
   display: grid;
   grid-template-columns: repeat 4, 25%;
   grid-template-areas: "footer footer footer footer" "footer footer footer footer";
-  margin: 20px;
   margin-bottom: 0;
   justify-content: space-around; }
   footer .footer-contenedor div {
@@ -1429,7 +1427,10 @@ footer .footer-contenedor {
         main .moda .moda-contenedor div:nth-child(4) strong {
           font-size: 13px;
           justify-content: center;
-          align-items: center; } }
+          align-items: center; }
+    main .moda div h2 {
+      font-size: 30px;
+      margin: 10px 10px 20px; } }
 
 @media screen and (max-width: 480px) {
   footer .suscripcion {
