--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -1150,6 +1150,12 @@
                     }
                 }
             }
+            div{
+                h2{
+                    font-size: 30px;
+                    margin: 10px 10px 20px;
+                }
+            }
         }
     }
 }
